# ServicePathMapper

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  version_update_tool.py
.github/workflows/: python-app.yml
src/servicepathmapper/: service_path_mapper.py  version_update_tool.py
src/servicepathmapper/common/: constants.py  logger.py
src/servicepathmapper/common/strings/: about.py  file_names.py  help.py  program_args.py  runtime_messages.py  stats.py
src/servicepathmapper/common/types/: config_stats.py  entities.py  output_generation_params.py  participation_in_paths_counters.py  paths_type_hints.py  printable.py  runtime_message_base.py  runtime_messages.py  tests_capture.py
src/servicepathmapper/io/input/: arg_info.py  get_args.py  process_args.py  validate_args.py
src/servicepathmapper/io/output_generators/: base.py  file_system.py  tests_capture.py  tests_dummy.py
src/servicepathmapper/logic/: paths.py  validate_potential_for_paths.py
src/servicepathmapper/logic/stats/: make_advanced_stats.py  make_config_stats.py
tests/: tests_common.py  tests_strings.py
tests/test_cases/args/boolean_values_flexibility/: test_case.py
tests/test_cases/args/cli_overrides_config_max_path_len/: test_case.py
tests/test_cases/early_detect_no_paths/: run_test_case_with_log_message.py
tests/test_cases/file_system/logger/: test_case.py
tests/test_cases/runtime_messages/: run_test_case.py
tests/test_cases/tests_capture/: run_test_case.py
tests/test_cases/tools/: test_version_update_script.py
tools/: version_update_tool.py
(+141 files in other folders)
